# components-leptos

./: Cargo.toml  README.md
style/: icon.css  index.css
